Update Analysing COVID-19 Data Repository by Johns Hopkins CSSE.ipynb

--- a/Analysing COVID-19 Data Repository by Johns Hopkins CSSE.ipynb
+++ b/Analysing COVID-19 Data Repository by Johns Hopkins CSSE.ipynb
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll now write a function that takes in a dataframe and drops the 'Country/Region' and 'Province/State' columns, sums all the values in the same column and retunrs a Series. Notice that as the columns were dropped, each column left represent a date."
+    "We'll now write a function that takes in a dataframe and drops the 'Country/Region' and 'Province/State' columns, sums all the values in the same column and returns a Series. Notice that as the columns were dropped, each column left represent a date."
    ]
   },
   {
