--- a/COVID_19_The_Scenario_in_Brazil_and_the_World.ipynb
+++ b/COVID_19_The_Scenario_in_Brazil_and_the_World.ipynb
@@ -23,6 +23,9 @@
         "# **COVID-19: The Scenario in Brazil and the World**\n",
         "\n",
         "![alt text](https://www.imagemhost.com.br/images/2020/06/21/1.jpg)\n",
+        "<p align=\"center\">\n",
+        "<a align=\"center\"href=\"https://www.freepik.com/free-photos-vectors/card\">Card photo created by freepik - www.freepik.com</a>\n",
+        "</p>\n",
         "\n",
         "## **Introduction**\n",
         "\n",
@@ -42,7 +45,7 @@
         "\n",
         "The main goal of this notebook is to follow, on a daily bases, the pandemic situation in Brazil, keeping track of the numbers of cases, deaths, and comparing the country's situation with other very affected countries. The project also aims to perform some analysis in the global situation during the COVID-19 pandemic.\n",
         "\n",
-        "<span style=\"color:red\">**To make the daily update of this notebook easier and faster, there won't be many explanations about each chart. This is preferable than having explanations that do not match what the chart shows, what would inevitably happen since the situation changes fast.**</span>\n",
+        "**To make the daily update of this notebook easier and faster, there won't be many explanations about each chart. This is preferable than having explanations that do not match what the chart shows, what would inevitably happen since the situation changes fast.**\n",
         "\n",
         "All the graphs will be pretty straight forward and easy to read. Also, as the subject is widely reported since the beginning of 2020, it is fair to assume that most people are already familiarized with it and capable of understanding the plots. Therefore, the great majority of the text present in this notebook is related to the code used.\n",
         "\n",
